--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -17,3 +17,5 @@ description: "Collection of photographs"
         </li>
     {% endfor %}
 </ul>
+
+{% include image-gallery.html folder="/uploads/album" %}
