linked to photos this time

--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -18,4 +18,4 @@ description: "Collection of photographs"
     {% endfor %}
 </ul>
 
-{% include image-gallery.html folder="/uploads/album" %}
+{% include image-gallery.html folder="/images/photos" %}
