can I have two galleries on top of each other?

--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -18,4 +18,10 @@ description: "Collection of photographs"
     {% endfor %}
 </ul>
 
+
+
+<h1>Film</h1>
+{% include image-gallery.html folder="/images/photos" %}
+
+<h1>London</h1>
 {% include image-gallery.html folder="/images/photos" %}
