trying single layout

--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -1,6 +1,8 @@
 ---
 title: Photography
 permalink: /photos/
+author_profile: false
+layout: single
 description: "Collection of photographs"
 ---
 
