--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -3,6 +3,7 @@ title: Photography
 permalink: /photos/
 author_profile: false
 layout: single
+classes: wide
 description: "Collection of photographs"
 ---
 
