what about splash

--- a/_pages/photos.html
+++ b/_pages/photos.html
@@ -2,8 +2,7 @@
 title: Photography
 permalink: /photos/
 author_profile: false
-layout: single
-classes: wide
+layout: splash
 description: "Collection of photographs"
 ---
 
