--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -107,7 +107,8 @@ a:visited { text-decoration: none; }
 
 a:hover { text-decoration: none; }
 
-a:active { text-decoration: none; }</style>
+a:active { text-decoration: none; }
+</style>
 <script>
 function showBibHere(biblink) {
     var element = biblink;
@@ -151,12 +152,13 @@ function expandAuthors(expandLink) {
             span.classList.remove("shortAuthors")
         }
     }
-}</script>
+}
+</script>
 <h3>2021</h3>
 <table cellspacing="0" class="yeartable">
 
             <tr id="Bale2021">
-             <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.3847/1538-4357/ac2d8c" target="_blank" rel="noopener noreferrer">A Solar Source of AlfvÈnic Magnetic Field Switchbacks: In Situ Remnants of Magnetic Funnels on Supergranulation Scales</a></span>
+             <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.3847/1538-4357/ac2d8c" target="_blank" rel="noopener noreferrer">A Solar Source of Alfv√©nic Magnetic Field Switchbacks: In Situ Remnants of Magnetic Funnels on Supergranulation Scales</a></span>
      <br>
      <span class="shortAuthors">S D Bale, T S Horbury, M Velli, M I Desai, J S Halekas <a class="button" style="cursor: pointer;" onClick="expandAuthors(this)">(et al.)</a></span>
      <span class="longAuthors">S D Bale, T S Horbury, M Velli, M I Desai, J S Halekas, M D McManus, O Panasenco, S T Badman, T A Bowen, B D G Chandran, J F Drake, J C Kasper, R Laker, A Mallet, L Matteini, T D Phan, N E Raouafi, J Squire, L D Woodham, T Woolley<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
@@ -184,10 +186,10 @@ function expandAuthors(expandLink) {
             
 
             <tr id="Matteini2021a">
-             <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.1051/0004-6361/202141229" target="_blank" rel="noopener noreferrer">Solar Orbiter \u0301s encounter with the tail of comet C/2019 Y4 (ATLAS): Magnetic field draping and cometary pick-up ion waves</a></span>
+             <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.1051/0004-6361/202141229" target="_blank" rel="noopener noreferrer">Solar Orbiter ÃÅs encounter with the tail of comet C/2019 Y4 (ATLAS): Magnetic field draping and cometary pick-up ion waves</a></span>
      <br>
      <span class="shortAuthors">Matteini, L., Laker, R., Horbury, T., Woodham, L., Bale, S. D. <a class="button" style="cursor: pointer;" onClick="expandAuthors(this)">(et al.)</a></span>
-     <span class="longAuthors">Matteini, L., Laker, R., Horbury, T., Woodham, L., Bale, S. D., Stawarz, J. E., Woolley, T., Steinvall, K., Jones, G. H., Grant, S. R., Afghan, Q., Galand, M., O \u0301Brien, H., Evans, V., Angelini, V., Maksimovic, M., Chust, T., Khotyaintsev, Y., Krasnoselskikh, V., Kretzschmar, M., LorfËvre, E., Plettemeier, D., Soucek, J., Steller, M., Stver·k, S., Tr·vnÌcek, P., Vaivads, A., Vecchio, A., Wimmer-Schweingruber, R. F., Ho, G. C., GÛmez-Herrero, R., RodrÌguez-Pacheco, J., Louarn, P., Fedorov, A., Owen, C. J., Bruno, R., Livi, S., Zouganelis, I., M¸ller, D.<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
+     <span class="longAuthors">Matteini, L., Laker, R., Horbury, T., Woodham, L., Bale, S. D., Stawarz, J. E., Woolley, T., Steinvall, K., Jones, G. H., Grant, S. R., Afghan, Q., Galand, M., O ÃÅBrien, H., Evans, V., Angelini, V., Maksimovic, M., Chust, T., Khotyaintsev, Y., Krasnoselskikh, V., Kretzschmar, M., Lorf√®vre, E., Plettemeier, D., Soucek, J., Steller, M., Stver√°k, S., Tr√°vn√≠cek, P., Vaivads, A., Vecchio, A., Wimmer-Schweingruber, R. F., Ho, G. C., G√≥mez-Herrero, R., Rodr√≠guez-Pacheco, J., Louarn, P., Fedorov, A., Owen, C. J., Bruno, R., Livi, S., Zouganelis, I., M√ºller, D.<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
      <span class="journal"><i>Astronomy & Astrophysics</i>, 656, pp. A39</span>
      <br>
      <span class="buttonline">
@@ -201,9 +203,9 @@ function expandAuthors(expandLink) {
   doi          = {10.1051/0004-6361/202141229},
   journal      = {Astronomy \& Astrophysics},
   year         = 2021,
+  month        = {December},
   volume       = 656,
   pages        = {A39},
-  month        = {December},
 }</pre>
     </td>
             </tr>
@@ -212,8 +214,8 @@ function expandAuthors(expandLink) {
             <tr id="Telloni2021b">
              <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.1051/0004-6361/202140648" target="_blank" rel="noopener noreferrer">Study of Two Interacting Interplanetary Coronal Mass Ejections Encountered by Solar Orbiter during Its First Perihelion Passage - Observations and Modeling</a></span>
      <br>
-     <span class="shortAuthors">D. Telloni, C. Scolini, C. Mˆstl, G. P. Zank, L.-L. Zhao <a class="button" style="cursor: pointer;" onClick="expandAuthors(this)">(et al.)</a></span>
-     <span class="longAuthors">D. Telloni, C. Scolini, C. Mˆstl, G. P. Zank, L.-L. Zhao, A. J. Weiss, M. A. Reiss, R. Laker, D. Perrone, Y. Khotyaintsev, K. Steinvall, L. Sorriso-Valvo, T. S. Horbury, R. F. Wimmer-Schweingruber, R. Bruno, R. D'Amicis, R. De Marco, V. K. Jagarlamudi, F. Carbone, R. Marino, M. Stangalini, M. Nakanotani, L. Adhikari, H. Liang, L. D. Woodham, E. E. Davies, H. Hietala, S. Perri, R. GÛmez-Herrero, J. RodrÌguez-Pacheco, E. Antonucci, M. Romoli, S. Fineschi, M. Maksimovic, J. Sou\u010dek, T. Chust, M. Kretzschmar, A. Vecchio, D. M¸ller, I. Zouganelis, R. M. Winslow, S. Giordano, S. Mancuso, R. Susino, S. L. Ivanovski, M. Messerotti, H. O'Brien, V. Evans, V. Angelini<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
+     <span class="shortAuthors">D. Telloni, C. Scolini, C. M√∂stl, G. P. Zank, L.-L. Zhao <a class="button" style="cursor: pointer;" onClick="expandAuthors(this)">(et al.)</a></span>
+     <span class="longAuthors">D. Telloni, C. Scolini, C. M√∂stl, G. P. Zank, L.-L. Zhao, A. J. Weiss, M. A. Reiss, R. Laker, D. Perrone, Y. Khotyaintsev, K. Steinvall, L. Sorriso-Valvo, T. S. Horbury, R. F. Wimmer-Schweingruber, R. Bruno, R. D'Amicis, R. De Marco, V. K. Jagarlamudi, F. Carbone, R. Marino, M. Stangalini, M. Nakanotani, L. Adhikari, H. Liang, L. D. Woodham, E. E. Davies, H. Hietala, S. Perri, R. G√≥mez-Herrero, J. Rodr√≠guez-Pacheco, E. Antonucci, M. Romoli, S. Fineschi, M. Maksimovic, J. Souƒçek, T. Chust, M. Kretzschmar, A. Vecchio, D. M√ºller, I. Zouganelis, R. M. Winslow, S. Giordano, S. Mancuso, R. Susino, S. L. Ivanovski, M. Messerotti, H. O'Brien, V. Evans, V. Angelini<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
      <span class="journal"><i>Astronomy & Astrophysics</i>, 656, pp. A5</span>
      <br>
      <span class="buttonline">
@@ -253,9 +255,9 @@ function expandAuthors(expandLink) {
   title        = {Multi-Spacecraft Study of the Solar Wind at Solar Minimum: {{Dependence}} on Latitude and Transient Outflows},
   author       = {Laker, R and Horbury, T S and Bale, S D and Matteini, L and Woolley, T and Woodham, L D and Stawarz, J E and Davies, E E and Eastwood, J P and Owens, M J and O'Brien, H and Evans, V and Angelini, V and Richter, I and Heyner, D and Owen, C J and Louarn, P and Fedorov, A},
   year         = 2021,
+  month        = {August},
   journal      = {Astronomy \& Astrophysics},
   volume       = 652,
-  month        = {August},
   doi          = {10.1051/0004-6361/202140679},
 }</pre>
     </td>
@@ -302,10 +304,10 @@ function expandAuthors(expandLink) {
   title        = {Enhanced Proton Parallel Temperature inside Patches of Switchbacks in the Inner Heliosphere},
   author       = {Woodham, L D and Horbury, T S and Matteini, L and Woolley, T and Laker, R and Bale, S D and Nicolaou, G and Stawarz, J E and Stansby, D and Hietala, H and Larson, D E and Livi, R and Verniero, J L and McManus, M and Kasper, J C and Korreck, K E and Raouafi, N and Moncuquet, M and Pulupa, M P},
   year         = 2021,
+  month        = {June},
   journal      = {A\&A},
   volume       = 650,
   doi          = {10.1051/0004-6361/202039415},
-  month        = {June},
 }</pre>
     </td>
             </tr>
@@ -327,6 +329,7 @@ function expandAuthors(expandLink) {
   title        = {Evolution of {{Solar Wind Turbulence}} from 0.1 to 1 Au during the {{First Parker Solar Probe-Solar Orbiter Radial Alignment}}},
   author       = {Telloni, Daniele and {Sorriso-Valvo}, Luca and Woodham, Lloyd D and Panasenco, Olga and Velli, Marco and Carbone, Francesco and Zank, Gary P and Bruno, Roberto and Perrone, Denise and Nakanotani, Masaru and Shi, Chen and D'Amicis, Raffaella and De Marco, Rossana and Jagarlamudi, Vamsee K and Steinvall, Konrad and Marino, Raffaele and Adhikari, Laxman and Zhao, Lingling and Liang, Haoming and Tenerani, Anna and Laker, Ronan and Horbury, Timothy S and Bale, Stuart D and Pulupa, Marc and Malaspina, David M and MacDowall, Robert J and Goetz, Keith and {de Wit}, Thierry Dudok and Harvey, Peter R and Kasper, Justin C and Korreck, Kelly E and Larson, Davin and Case, Anthony W and Stevens, Michael L and Whittlesey, Phyllis and Livi, Roberto and Owen, Christopher J and Livi, Stefano and Louarn, Philippe and Antonucci, Ester and Romoli, Marco and O'Brien, Helen and Evans, Vincent and Angelini, Virginia},
   year         = 2021,
+  month        = {May},
   journal      = {The Astrophysical Journal Letters},
   volume       = 912,
   number       = 2,
@@ -334,7 +337,6 @@ function expandAuthors(expandLink) {
   publisher    = {{American Astronomical Society}},
   issn         = {2041-8205},
   doi          = {10.3847/2041-8213/abf7d1},
-  month        = {May},
 }</pre>
     </td>
             </tr>
@@ -347,8 +349,8 @@ function expandAuthors(expandLink) {
              <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.1093/mnras/staa2770" target="_blank" rel="noopener noreferrer">Proton Core Behaviour inside Magnetic Field Switchbacks</a></span>
      <br>
      <span class="shortAuthors">Thomas Woolley, Lorenzo Matteini, Timothy S Horbury, Stuart D Bale, Lloyd D Woodham <a class="button" style="cursor: pointer;" onClick="expandAuthors(this)">(et al.)</a></span>
-     <span class="longAuthors">Thomas Woolley, Lorenzo Matteini, Timothy S Horbury, Stuart D Bale, Lloyd D Woodham, Ronan Laker, Benjamin L Alterman, John W Bonnell, Anthony W Case, Justin C Kasper, Kristopher G Klein, Mihailo M Martinovi\u0107, Michael Stevens<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
-     <span class="journal"><i>Monthly Notices of the Royal Astronomical Society</i>, 498, pp. 5524ñ5531</span>
+     <span class="longAuthors">Thomas Woolley, Lorenzo Matteini, Timothy S Horbury, Stuart D Bale, Lloyd D Woodham, Ronan Laker, Benjamin L Alterman, John W Bonnell, Anthony W Case, Justin C Kasper, Kristopher G Klein, Mihailo M Martinoviƒá, Michael Stevens<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
+     <span class="journal"><i>Monthly Notices of the Royal Astronomical Society</i>, 498, pp. 5524‚Äì5531</span>
      <br>
      <span class="buttonline">
      <a class="custombutton" style="cursor: pointer;" onClick="showBibHere(this);">Cite</a>
@@ -359,20 +361,20 @@ function expandAuthors(expandLink) {
   title        = {Proton Core Behaviour inside Magnetic Field Switchbacks},
   author       = {Woolley, Thomas and Matteini, Lorenzo and Horbury, Timothy S and Bale, Stuart D and Woodham, Lloyd D and Laker, Ronan and Alterman, Benjamin L and Bonnell, John W and Case, Anthony W and Kasper, Justin C and Klein, Kristopher G and Martinovi{\'c}, Mihailo M and Stevens, Michael},
   year         = 2020,
+  month        = {September},
   journal      = {Monthly Notices of the Royal Astronomical Society},
   volume       = 498,
   number       = 4,
   pages        = {5524--5531},
   issn         = {0035-8711},
   doi          = {10.1093/mnras/staa2770},
-  month        = {September},
 }</pre>
     </td>
             </tr>
             
 
             <tr id="Horbury2020">
-             <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.3847/1538-4365/ab5b15" target="_blank" rel="noopener noreferrer">Sharp AlfvÈnic Impulses in the Near-Sun Solar Wind</a></span>
+             <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.3847/1538-4365/ab5b15" target="_blank" rel="noopener noreferrer">Sharp Alfv√©nic Impulses in the Near-Sun Solar Wind</a></span>
      <br>
      <span class="shortAuthors">Timothy S Horbury, Thomas Woolley, Ronan Laker, Lorenzo Matteini, Jonathan Eastwood <a class="button" style="cursor: pointer;" onClick="expandAuthors(this)">(et al.)</a></span>
      <span class="longAuthors">Timothy S Horbury, Thomas Woolley, Ronan Laker, Lorenzo Matteini, Jonathan Eastwood, Stuart D Bale, Marco Velli, Benjamin D G Chandran, Tai Phan, Nour E Raouafi, Keith Goetz, Peter R Harvey, Marc Pulupa, K G Klein, Thierry Dudok de Wit, Justin C Kasper, Kelly E Korreck, A W Case, Michael L Stevens, Phyllis Whittlesey, Davin Larson, Robert J MacDowall, David M Malaspina, Roberto Livi<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
@@ -407,7 +409,7 @@ function expandAuthors(expandLink) {
      <br>
      <span class="shortAuthors">S D Bale, S T Badman, J W Bonnell, T A Bowen, D Burgess <a class="button" style="cursor: pointer;" onClick="expandAuthors(this)">(et al.)</a></span>
      <span class="longAuthors">S D Bale, S T Badman, J W Bonnell, T A Bowen, D Burgess, A W Case, C A Cattell, B D G Chandran, C C Chaston, C H K Chen, J F Drake, T Dudok de Wit, J P Eastwood, R E Ergun, W M Farrell, C Fong, K Goetz, M Goldstein, K A Goodrich, P R Harvey, T S Horbury, G G Howes, J C Kasper, P J Kellogg, J A Klimchuk, K E Korreck, V V Krasnoselskikh, S Krucker, R Laker, D E Larson, R J MacDowall, M Maksimovic, D M Malaspina, J Martinez-Oliveros, D J McComas, N Meyer-Vernet, M Moncuquet, F S Mozer, T D Phan, M Pulupa, N E Raouafi, C Salem, D Stansby, M Stevens, A Szabo, M Velli, T Woolley, J R Wygant<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
-     <span class="journal"><i>Nature</i>, 576, pp. 237ñ242</span>
+     <span class="journal"><i>Nature</i>, 576, pp. 237‚Äì242</span>
      <br>
      <span class="buttonline">
      <a class="custombutton" style="cursor: pointer;" onClick="showBibHere(this);">Cite</a>
@@ -418,6 +420,7 @@ function expandAuthors(expandLink) {
   title        = {Highly Structured Slow Solar Wind Emerging from an Equatorial Coronal Hole},
   author       = {Bale, S D and Badman, S T and Bonnell, J W and Bowen, T A and Burgess, D and Case, A W and Cattell, C A and Chandran, B D G and Chaston, C C and Chen, C H K and Drake, J F and {de Wit}, T Dudok and Eastwood, J P and Ergun, R E and Farrell, W M and Fong, C and Goetz, K and Goldstein, M and Goodrich, K A and Harvey, P R and Horbury, T S and Howes, G G and Kasper, J C and Kellogg, P J and Klimchuk, J A and Korreck, K E and Krasnoselskikh, V V and Krucker, S and Laker, R and Larson, D E and MacDowall, R J and Maksimovic, M and Malaspina, D M and {Martinez-Oliveros}, J and McComas, D J and {Meyer-Vernet}, N and Moncuquet, M and Mozer, F S and Phan, T D and Pulupa, M and Raouafi, N E and Salem, C and Stansby, D and Stevens, M and Szabo, A and Velli, M and Woolley, T and Wygant, J R},
   year         = 2019,
+  month        = {December},
   journal      = {Nature},
   volume       = 576,
   number       = 7786,
@@ -425,7 +428,6 @@ function expandAuthors(expandLink) {
   publisher    = {{Springer US}},
   issn         = 14764687,
   doi          = {10.1038/s41586-019-1818-7},
-  month        = {December},
 }</pre>
     </td>
             </tr>
