--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -186,7 +186,7 @@ function expandAuthors(expandLink) {
             
 
             <tr id="Matteini2021a">
-             <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.1051/0004-6361/202141229" target="_blank" rel="noopener noreferrer">Solar Orbiter ́s encounter with the tail of comet C/2019 Y4 (ATLAS): Magnetic field draping and cometary pick-up ion waves</a></span>
+             <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.1051/0004-6361/202141229" target="_blank" rel="noopener noreferrer">Solar Orbiter's encounter with the tail of comet C/2019 Y4 (ATLAS): Magnetic field draping and cometary pick-up ion waves</a></span>
      <br>
      <span class="shortAuthors">Matteini, L., Laker, R., Horbury, T., Woodham, L., Bale, S. D. <a class="button" style="cursor: pointer;" onClick="expandAuthors(this)">(et al.)</a></span>
      <span class="longAuthors">Matteini, L., Laker, R., Horbury, T., Woodham, L., Bale, S. D., Stawarz, J. E., Woolley, T., Steinvall, K., Jones, G. H., Grant, S. R., Afghan, Q., Galand, M., O ́Brien, H., Evans, V., Angelini, V., Maksimovic, M., Chust, T., Khotyaintsev, Y., Krasnoselskikh, V., Kretzschmar, M., Lorfèvre, E., Plettemeier, D., Soucek, J., Steller, M., Stverák, S., Trávnícek, P., Vaivads, A., Vecchio, A., Wimmer-Schweingruber, R. F., Ho, G. C., Gómez-Herrero, R., Rodríguez-Pacheco, J., Louarn, P., Fedorov, A., Owen, C. J., Bruno, R., Livi, S., Zouganelis, I., Müller, D.<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
@@ -199,7 +199,7 @@ function expandAuthors(expandLink) {
      <pre class="bibhidden">
 @article{Matteini2021a,
   author       = {{Matteini, L.} and {Laker, R.} and {Horbury, T.} and {Woodham, L.} and {Bale, S. D.} and {Stawarz, J. E.} and {Woolley, T.} and {Steinvall, K.} and {Jones, G. H.} and {Grant, S. R.} and {Afghan, Q.} and {Galand, M.} and {O\'{}Brien, H.} and {Evans, V.} and {Angelini, V.} and {Maksimovic, M.} and {Chust, T.} and {Khotyaintsev, Y.} and {Krasnoselskikh, V.} and {Kretzschmar, M.} and {Lorf\`evre, E.} and {Plettemeier, D.} and {Soucek, J.} and {Steller, M.} and {Stver\'ak, S.} and {Tr\'avn\'{\i}cek, P.} and {Vaivads, A.} and {Vecchio, A.} and {Wimmer-Schweingruber, R. F.} and {Ho, G. C.} and {G\'omez-Herrero, R.} and {Rodr\'{\i}guez-Pacheco, J.} and {Louarn, P.} and {Fedorov, A.} and {Owen, C. J.} and {Bruno, R.} and {Livi, S.} and {Zouganelis, I.} and {M\"uller, D.}},
-  title        = {Solar Orbiter\'{}s encounter with the tail of comet C/2019 Y4 (ATLAS): Magnetic field draping and cometary pick-up ion waves},
+  title        = {Solar Orbiter's encounter with the tail of comet C/2019 Y4 (ATLAS): Magnetic field draping and cometary pick-up ion waves},
   doi          = {10.1051/0004-6361/202141229},
   journal      = {Astronomy \& Astrophysics},
   year         = 2021,
@@ -293,7 +293,7 @@ function expandAuthors(expandLink) {
      <br>
      <span class="shortAuthors">L D Woodham, T S Horbury, L Matteini, T Woolley, R Laker <a class="button" style="cursor: pointer;" onClick="expandAuthors(this)">(et al.)</a></span>
      <span class="longAuthors">L D Woodham, T S Horbury, L Matteini, T Woolley, R Laker, S D Bale, G Nicolaou, J E Stawarz, D Stansby, H Hietala, D E Larson, R Livi, J L Verniero, M McManus, J C Kasper, K E Korreck, N Raouafi, M Moncuquet, M P Pulupa<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
-     <span class="journal"><i>A&A</i>, 650</span>
+     <span class="journal"><i>Astronomy & Astrophysics</i>, 650</span>
      <br>
      <span class="buttonline">
      <a class="custombutton" style="cursor: pointer;" onClick="showBibHere(this);">Cite</a>
@@ -305,7 +305,7 @@ function expandAuthors(expandLink) {
   author       = {Woodham, L D and Horbury, T S and Matteini, L and Woolley, T and Laker, R and Bale, S D and Nicolaou, G and Stawarz, J E and Stansby, D and Hietala, H and Larson, D E and Livi, R and Verniero, J L and McManus, M and Kasper, J C and Korreck, K E and Raouafi, N and Moncuquet, M and Pulupa, M P},
   year         = 2021,
   month        = {June},
-  journal      = {A\&A},
+  journal      = {Astronomy \& Astrophysics},
   volume       = 650,
   doi          = {10.1051/0004-6361/202039415},
 }</pre>
