changed pdf red

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -45,12 +45,12 @@ a:active { text-decoration: none; }
 .buttonpdf,
 .buttonpdf:visited {
     background-color: white; 
-    color: #f44336; 
-    border: 2px solid #f44336;
+    color: #c90241; 
+    border: 2px solid #c90241;
 }
 
 .buttonpdf:hover {
-    background-color: #f44336;
+    background-color: #c90241;
     color: white;
 }
 
