added Laker2022 to publications

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,10 +1,3 @@
----
-layout: archive
-title: "Publications"
-permalink: /publications/
-author_profile: true
----
-{% raw %}
 <div class="publicationlist">
 <style>
 /* make links have no underline */
@@ -45,12 +38,12 @@ a:active { text-decoration: none; }
 .buttonpdf,
 .buttonpdf:visited {
     background-color: white; 
-    color: #c90241; 
-    border: 2px solid #c90241;
+    color: #f44336; 
+    border: 2px solid #f44336;
 }
 
 .buttonpdf:hover {
-    background-color: #c90241;
+    background-color: #f44336;
     color: white;
 }
 
@@ -166,6 +159,33 @@ function expandAuthors(expandLink) {
 </script>
 <h3>2022</h3>
 <table cellspacing="0" class="yeartable">
+
+            <tr id="Laker2022">
+             <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.1093/mnras/stac2477" target="_blank" rel="noopener noreferrer">Switchback Deflections beyond the Early Parker Solar Probe Encounters</a></span>
+     <br>
+     <span class="shortAuthors">R. Laker, T S Horbury, L Matteini, S D Bale, J E Stawarz <a class="button" style="cursor: pointer;" onClick="expandAuthors(this)">(et al.)</a></span>
+     <span class="longAuthors">R. Laker, T S Horbury, L Matteini, S D Bale, J E Stawarz, L D Woodham, T Woolley<a class="button" style="cursor: pointer;" onClick="expandAuthors(this)"> (collapse)</a></span>
+     <span class="journal"><i>Monthly Notices of the Royal Astronomical Society</i>, pp. stac2477</span>
+     <br>
+     <span class="buttonline">
+     <a class="custombutton" style="cursor: pointer;" onClick="showBibHere(this);">Cite</a>
+      <a class="custombutton buttondoi" href="https://dx.doi.org/10.1093/mnras/stac2477" target="_blank" rel="noopener noreferrer">DOI</a>
+     </span>
+     <pre class="bibhidden">
+@article{Laker2022,
+  title        = {Switchback Deflections beyond the Early Parker Solar Probe Encounters},
+  author       = {Laker, R. and Horbury, T S and Matteini, L and Bale, S D and Stawarz, J E and Woodham, L D and Woolley, T},
+  year         = 2022,
+  month        = {September},
+  journal      = {Monthly Notices of the Royal Astronomical Society},
+  pages        = {stac2477},
+  issn         = {0035-8711, 1365-2966},
+  doi          = {10.1093/mnras/stac2477},
+  copyright    = {All rights reserved},
+}</pre>
+    </td>
+            </tr>
+            
 
             <tr id="Reville2022">
              <td class="bibitemtext" valign="center">     <span class="title"><a href="https://dx.doi.org/10.1051/0004-6361/202142381" target="_blank" rel="noopener noreferrer">Flux Rope and Dynamics of the Heliospheric Current Sheet: Study of the Parker Solar Probe and Solar Orbiter Conjunction of June 2020</a></span>
@@ -565,4 +585,3 @@ function expandAuthors(expandLink) {
  </div>
 </div> <!-- end of publicationlist -->
 
-{% endraw %}
