added yaml back in to publications

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,3 +1,10 @@
+---
+layout: archive
+title: "Publications"
+permalink: /publications/
+author_profile: true
+---
+{% raw %}
 <div class="publicationlist">
 <style>
 /* make links have no underline */
@@ -585,3 +592,4 @@ function expandAuthors(expandLink) {
  </div>
 </div> <!-- end of publicationlist -->
 
+{% endraw %}
